diceRoll/diceRoll.css
* {
  box-sizing: border-box;
  text-align: center;
  font-family: arial, sans-serif;
  /*font-size: 14px;*/
  color: white;
  background-color: #252B39;
}
div {
  background-color: inherit;
  text-align: inherit;
}
@media only screen and (max-width: 500px) {
  /* for mobile: */
  .col-m-1 {width: 8.33%;}
  .col-m-2 {width: 16.66%;}
  .col-m-3 {width: 25%;}
  .col-m-4 {width: 33.33%;}
  .col-m-5 {width: 41.66%;}
  .col-m-6 {width: 50%;}
  .col-m-7 {width: 58.33%;}
  .col-m-8 {width: 66.66%;}
  .col-m-9 {width: 75%;}
  .col-m-10 {width: 83.33%;}
  .col-m-11 {width: 91.66%;}
  .col-m-12 {width: 100%;}
  .disp {height: 20vh;}
}
@media only screen and (min-width: 500px) {
  /* for tablet: */
  .col-t-1 {width: 8.33%;}
  .col-t-2 {width: 16.66%;}
  .col-t-3 {width: 25%;}
  .col-t-4 {width: 33.33%;}
  .col-t-5 {width: 41.66%;}
  .col-t-6 {width: 50%;}
  .col-t-7 {width: 58.33%;}
  .col-t-8 {width: 66.66%;}
  .col-t-9 {width: 75%;}
  .col-t-10 {width: 83.33%;}
  .col-t-11 {width: 91.66%;}
  .col-t-12 {width: 100%;}
  .disp {height: 252px;}

}
@media only screen and (min-width: 768px) {
  /* for desktop: */
  .col-1 {width: 8.33%;}
  .col-2 {width: 16.66%;}
  .col-3 {width: 25%;}
  .col-4 {width: 33.33%;}
  .col-5 {width: 41.66%;}
  .col-6 {width: 50%;}
  .col-7 {width: 58.33%;}
  .col-8 {width: 66.66%;}
  .col-9 {width: 75%;}
  .col-10 {width: 83.33%;}
  .col-11 {width: 91.66%;}
  .col-12 {width: 100%;}
}
[class*="col-"] {
    float: left;
    padding: 10px;
    /*border: 1px solid red;*/
    /*min-width: 65px;*/
    overflow: hidden;
    white-space: nowrap;
    /*text-overflow: ellipsis;*/
}

.buff {
  float: left;
  border: none;
}
.holder {
  padding: 0px;
}
.row::after {
  content: "";
  clear: both;
  display: table;
}
.btn {
  cursor: pointer;
  background-color: #226666;
  border: 2px solid #2E4272;
}
.num {
  background-color: #254BA2;
}
.oper {
  background-color: #1351DE;
}
.disp {
  text-align: right;
  background-color: #AA6C39;
  border: 2px solid #F17F21;
  /**/
}
@media only screen and (min-width: 500px) {

}
#rollBtn {
  background-color: #FF7400;
}
#clrBtn {
  background-color: #F1AC21;
}
#dispOut {
  color: #FFC194;
}

